--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 # Site settings
-title: Clean Blog
+title: Olawale Akinseye
 header-img: img/home-bg.jpg
-email: your-email@yourdomain.com
-copyright_name: Your/Project/Corporate Name
+email: brainyfarm@gmail.com
+copyright_name: Olawale Akinseye
 description: "Write your site description here. It will be used as your sites meta description as well!"
-baseurl: "/startbootstrap-clean-blog-jekyll"
+baseurl: ""
 url: "http://yourdomain.com"
-twitter_username: SBootstrap
-github_username:  davidtmiller
-facebook_username:  IronSummitMedia
-email_username:  your-email@yourdomain.com
+twitter_username: brainyfarm
+github_username:  brainyfarm
+facebook_username:  whisper2bay
+email_username:  brainyfarm@gmail.com
 
 # Google Analytics
 # To enable google analytics, uncomment below line with a valid Google Tracking ID
