--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ title: Olawale Akinseye
 header-img: img/home-bg.jpg
 email: brainyfarm@gmail.com
 copyright_name: Olawale Akinseye
-description: "Write your site description here. It will be used as your sites meta description as well!"
+description: "Olawale Akinseye: android, brainyfarm, BrainySoft"
 baseurl: ""
-url: "http://yourdomain.com"
+url: "http://masterbrainy.com"
 twitter_username: brainyfarm
 github_username:  brainyfarm
 facebook_username:  whisper2bay
